# torch-adapters

./: LICENSE  README.md  pyproject.toml
examples/: roberta_lora.py
src/torch_adapters/: utils.py
src/torch_adapters/adapters/: adalora.py  adapter.py  ia3.py  lora.py  mixin.py  prefix_tuning.py  prefix_tuning_embedding.py  prompt_tuning.py
tests/: test_adapters.py
