[tool.poetry]
name = "torch-adapters"
version = "0.0.1"
description = ""
authors = ["ma2za <mazzapaolo2019@gmail.com>"]
readme = "README.md"
packages = [{include = "torch_adapters", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
