[tool.poetry]
name = "torch-adapters"
version = "0.0.5"
description = "Small Library of Torch Adaptation modules"
authors = ["ma2za <mazzapaolo2019@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "torch_adapters", from = "src" }]

repository = "https://github.com/ma2za/torch-adapters"
homepage = "https://github.com/ma2za/torch-adapters"

keywords = ["lora", "adapters", "llm", "transformers", "bert"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
